refactor: refactor poc to use mongo